package org.arvinw.example12_3;

public interface Internet {

    void httpAccess(String url);
}
